DCAF-110 - fixed underline showing when displayed on small devices for header text and image

--- a/src/app/components/site-header/site-header.component.scss
+++ b/src/app/components/site-header/site-header.component.scss
@@ -11,3 +11,7 @@ h1 { color:#ffffff;}
 a:hover{
     text-decoration: none;
 }
+
+.title-link {
+    text-decoration: none;
+}
